src/objects/BGBL__Letter_Single__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings needed for Single and Batch Letters</description>
    <fields>
        <fullName>BGBL__Batch_Letter_Chunk_Size__c</fullName>
        <defaultValue>5000</defaultValue>
        <description>Job will return with error if enter &gt; 5,000</description>
        <inlineHelpText>If blank, batch letter job chunk size is limited to 5,000. Enter any number only up to 5,000.</inlineHelpText>
        <label>Batch Letter Chunk Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBL__Letter_Request_Endpoint__c</fullName>
        <defaultValue>&quot;https://lettersingle.mybasicgov.com/RunBatchMergeJob/SingleLetter.aspx&quot;</defaultValue>
        <description>Setting will overwrite default production single letter request endpoint to any url or ip of Admin&apos;s choosing (for testing and migration purposes).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Setting will overwrite default production single letter request endpoint to any url or ip of Admin&apos;s choosing (for testing and migration purposes).</inlineHelpText>
        <label>Single Manual Letter Request Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BGBL__Request_Objects_Additional__c</fullName>
        <description>only needed when Attach Letter button refers to the letterAttach scontrol (as opposed to the LetterRequest VF page)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>when including Attach Letter button to an object, add object API name to this list. comma-delimited. no spaces. do not include Permit2, License2, Application2. The shorter this list, the quicker the page loads.</inlineHelpText>
        <label>Single Man. Reqst Objects - Additional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Save_Generated_Document_as_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Save the generated document as File. If unchecked, it is saved as Attachment</inlineHelpText>
        <label>Save Generated Document as File</label>
        <type>Checkbox</type>
    </fields>
    <label>BG Letter Engine settings</label>
</CustomObject>